--- a/socialNetwork/docker-compose.yml
+++ b/socialNetwork/docker-compose.yml
@@ -1,15 +1,15 @@
-version: "3.9"
+version: "3"
 services:
   social-graph-service:
     image: deathstarbench/social-network-microservices:latest
     hostname: social-graph-service
     #    ports:
     #      - 10000:9090
-    depends_on:
-      jaeger-agent:
-        condition: service_started
-      social-graph-mongodb:
-        condition: service_started
+    # depends_on:
+    #   jaeger-agent:
+    #     condition: service_started
+    #   social-graph-mongodb:
+    #     condition: service_started
     restart: always
     entrypoint: SocialGraphService
     volumes:
@@ -42,9 +42,9 @@ services:
     #    ports:
     #      - 10001:9090
     restart: always
-    depends_on:
-      jaeger-agent:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
     entrypoint: ComposePostService
     volumes:
       - ./config:/social-network-microservices/config
@@ -55,11 +55,11 @@ services:
     ports:
       - 10002:9090
     restart: always
-    depends_on:
-      jaeger-agent:
-        condition: service_started
-      post-storage-mongodb:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
+      #   post-storage-mongodb:
+      #     condition: service_started
     entrypoint: PostStorageService
     volumes:
       - ./config:/social-network-microservices/config
@@ -84,11 +84,11 @@ services:
     #    ports:
     #      - 10003:9090
     restart: always
-    depends_on:
-      jaeger-agent:
-        condition: service_started
-      user-timeline-mongodb:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
+      #   user-timeline-mongodb:
+      #     condition: service_started
     entrypoint: UserTimelineService
     volumes:
       - ./config:/social-network-microservices/config
@@ -114,11 +114,11 @@ services:
     #      - 10004:9090
     restart: always
     entrypoint: UrlShortenService
-    depends_on:
-      jaeger-agent:
-        condition: service_started
-      url-shorten-mongodb:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
+      #   url-shorten-mongodb:
+      #     condition: service_started
     volumes:
       - ./config:/social-network-microservices/config
 
@@ -142,11 +142,11 @@ services:
     #    ports:
     #      - 10005:9090
     restart: always
-    depends_on:
-      jaeger-agent:
-        condition: service_started
-      user-mongodb:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
+      #   user-mongodb:
+      #     condition: service_started
     entrypoint: UserService
     volumes:
       - ./config:/social-network-microservices/config
@@ -170,11 +170,11 @@ services:
     hostname: media-service
     #    ports:
     #      - 10006:9090
-    depends_on:
-      jaeger-agent:
-        condition: service_started
-      media-mongodb:
-        condition: service_started
+    #depends_on:
+    #  jaeger-agent:
+    #    condition: service_started
+    #  media-mongodb:
+    #    condition: service_started
     restart: always
     entrypoint: MediaService
     volumes:
@@ -200,9 +200,9 @@ services:
     #    ports:
     #      - 10007:9090
     restart: always
-    depends_on:
-      jaeger-agent:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
     entrypoint: TextService
     volumes:
       - ./config:/social-network-microservices/config
@@ -213,9 +213,9 @@ services:
     #    ports:
     #      - 10008:9090
     restart: always
-    depends_on:
-      jaeger-agent:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
     entrypoint: UniqueIdService
     volumes:
       - ./config:/social-network-microservices/config
@@ -225,9 +225,9 @@ services:
     hostname: user-mention-service
     #    ports:
     #      - 10009:9090
-    depends_on:
-      jaeger-agent:
-        condition: service_started
+    # depends_on:
+    #   jaeger-agent:
+    #     condition: service_started
     restart: always
     entrypoint: UserMentionService
     volumes:
@@ -238,9 +238,9 @@ services:
     hostname: home-timeline-service
     #    ports:
     #      - 10010:9090
-    depends_on:
-      jaeger-agent:
-        condition: service_started
+    # depends_on:
+    #   jaeger-agent:
+    #     condition: service_started
     restart: always
     entrypoint: HomeTimelineService
     volumes:
@@ -251,9 +251,9 @@ services:
     hostname: nginx-thrift
     ports:
       - 8080:8080
-    depends_on:
-      jaeger-agent:
-        condition: service_started
+        # depends_on:
+        #   jaeger-agent:
+        #     condition: service_started
     restart: always
     volumes:
       - ./nginx-web-server/lua-scripts:/usr/local/openresty/nginx/lua-scripts
@@ -269,9 +269,9 @@ services:
     ports:
       - 8081:8080
     restart: always
-    depends_on:
-      jaeger-agent:
-        condition: service_started
+      # depends_on:
+      #   jaeger-agent:
+      #     condition: service_started
     volumes:
       - ./media-frontend/lua-scripts:/usr/local/openresty/nginx/lua-scripts
       - ./media-frontend/conf/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
